- yWeb: replace XMLHttpRequest() by jquery-function

--- a/data/y-web/index.html
+++ b/data/y-web/index.html
@@ -4,13 +4,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>yWeb</title>
+<script type="text/javascript" src="/jquery/jquery.min.js"></script>
 <script type="text/javascript">
 //<![CDATA[
-	var xmlhttp = new XMLHttpRequest();
-	xmlhttp.open("GET", "/etc/hostname", false);
-	xmlhttp.send();
-	if (xmlhttp.status == 200)
-		document.title = xmlhttp.responseText;
+jQuery.get("/etc/hostname", function(data) {
+	jQuery('html head').find('title').text(data);
+});
 //]]>
 </script>
 </head>
