--- a/data/y-web/index.html
+++ b/data/y-web/index.html
@@ -4,8 +4,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>yWeb</title>
-<script type="text/javascript" src="/jquery/jquery.min.js"></script>
-<script type="text/javascript">
+<script src="/jquery/jquery.min.js"></script>
+<script>
 //<![CDATA[
 jQuery.get("/etc/hostname", function(data) {
 	jQuery('html head').find('title').text(data);
