--- a/data/y-web/lcd4linux/index.html
+++ b/data/y-web/lcd4linux/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-"http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="expires" content="Thu, 01 Jan 1970 00:01:00 GMT">
@@ -7,7 +6,6 @@
 <meta http-equiv="refresh" content="0; URL=ylcd4linux.yhtm">
 <title></title>
 </head>
-
 <body>
 	<div>
 	</div>
